--- a/assets/static/css/style.css
+++ b/assets/static/css/style.css
@@ -3,3 +3,8 @@
     height: 40px;
     margin-right: 10px;
 }
+.welcome {
+    background: url('../../../assets/static/img/background.jpg');
+    background-position: center center;
+    background-size: cover;
+}
